# confluence-dc-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
src/confluence_dc_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_client.py  test_config.py  test_server.py
