[project]
name = "confluence-dc-mcp"
version = "0.1.0"
description = "MCP server for Confluence Data Center raw storage operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.9.0",
]

[project.scripts]
confluence-dc-mcp = "confluence_dc_mcp.server:main"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
